# api/app/model/mfa.go
@@ -1,0 +1,5 @@
+package model
+
+type ValidateMFAST struct {
+	Code string `json:"code" validate:"required"`
+}
